# crimson

./: .gitignore  AGENTS.md  codex_auto.py  crimson_port_audit_2026-01-29.md  crt.md  findings.md  justfile  pause.md  plan.md  png_findings.md  pyproject.toml  readme.md  review.md  sdf-shadows.md  sgconfig.yml  terrain.md  work.md  zensical.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml  release.yml
analysis/binary_ninja/: grim.dll.bndb_hlil.txt
analysis/frida/: creature2_6800_7050_latest.json  creature42_2300_4200_latest.json  creature42_3550_3600_after_anglefix_latest.json  creature_anim_trace_summary.json  creature_render_trace_summary.json  divergence_report_latest.json  divergence_report_tol5e4_latest.json  divergence_report_w100_latest.json  divergence_report_w80_latest.json  evidence_summary.json  (+60 more)
docs/: .frontmatter_tags_allowlist  all-pages.md  atlas.md  audio-entry.md  audio.md  binary-analysis.md  bonus-drop-rates.md  bonus-id-map.md  boot-sequence.md  console.md  creature-struct.md  crimson-cfg.md  crimsonland-exe.md  detangling.md  duplication-triage.md  effects-struct.md  entrypoint.md  frida-workflow.md  game-mode-map.md  grim2d-api-evidence.md  grim2d-api.md  grim2d-overview.md  grim2d-runtime-validation.md  index.md  metrics.md  modern-android.md  modern-linux.md  music.md  perk-id-map.md  perks-mechanics.md  perks.md  pipeline.md  plan.md  plan2.md  player-struct.md  projectile-struct.md  provenance.md  python-executable-spec.md  quest-builders.md  refactor.md  (+17 more)
incoming/: crimsonland.md  ghidra.md  grim.md  plan.md  survival.md
rewrite/: README.md  build.zig  build.zig.zon
scripts/: atlas_export.py  atlas_scan.py  binja_import_maps.py  cdb_bridge.py  cdb_client.py  check_asset_loader_usage.py  check_docs.py  codex_loop.sh  creature_anim_trace_reduce.py  creature_render_trace_reduce.py  dat_hotspots.py  decompile_signature_diff.py  demo_idle_threshold_summarize.py  demo_trial_overlay_validate.py  entrypoint_trace.py  extract_ground_stamp_cases.py  extract_weapon_table.py  frida_reduce.py  function_hotspots.py  fx_queue_render_trace_reduce.py  game_over_panel_trace_reduce.py  gameplay_state_capture_reduce.py  gen_all_pages.py  gen_perk_matrix.py  gen_spawn_templates.py  ghidra_sync.sh  grim2d_vtable_callsites.py  grim2d_vtable_export.py  ida_decompile.py  ida_export.py  import_ground_dump_fixtures.py  map_progress.py  original_capture_creature_trajectory.py  original_capture_divergence_report.py  original_capture_focus_trace.py  player_sprite_trace_reduce.py  quest_build_reduce.py  release_notify.py  save_status.py  screen_fade_trace_reduce.py  (+7 more)
source/: README.md
tests/: conftest.py  test_alternate_weapon_perk.py  test_ammo_maniac_perk.py  test_ammunition_within_perk.py  test_antiperk_perk.py  test_anxious_loader_perk.py  test_assets_fetch.py  test_bandage_perk.py  test_barrel_greaser_perk.py  test_bloody_mess_quick_learner_perk.py  test_bonus_economist_perk.py  test_bonus_labels.py  test_bonus_magnet_perk.py  test_bonus_pick_random_type_quest_suppression.py  test_bonus_pickup_fx.py  test_bonus_pistol_rules.py  test_bonus_spawn_suppression.py  test_boot_easter_eggs.py  test_breathing_room_perk.py  test_camera_clamp_regression.py  test_camera_shake.py  test_config_player_name.py  test_console_command_generateterrain.py  test_console_command_setgammaramp.py  test_console_command_sndfreqadjustment.py  test_console_command_telltimesurvived.py  test_controls_labels.py  test_crdemo_format.py  test_creature_ai.py  test_creature_anim.py  test_creature_damage.py  test_creature_runtime.py  test_credits_view.py  test_death_clock_perk.py  test_death_timing.py  test_demo_mode_movement_deadzone.py  test_demo_trial.py  test_doctor_perk.py  test_double_xp_bonus.py  test_effects.py  (+166 more)
(+711 files in other folders)
