[project]
name = "crimson"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "construct>=2.10.70",
    "pillow>=12.1.0",
    "raylib>=5.5.0.4",
    "typer>=0.21.1",
]

[project.scripts]
crimson = "crimson.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "syrupy>=5.0.0",
    "zensical>=0.0.16",
]

[tool.ruff]

[tool.ruff.lint]
extend-ignore = ["E402"]
