[project]
name = "crimson"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "construct>=2.10.70",
    "pillow>=12.1.0",
    "raylib>=5.5.0.4",
    "typer>=0.21.1",
]

[project.scripts]
crimson = "crimson.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "syrupy>=5.0.0",
    "zensical>=0.0.16",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E402"]

[tool.pytest.ini_options]
addopts = [
    "--cov=crimson",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["crimson"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
