[project]
name = "crimsonland"
version = "0.1.0.dev25"
readme = { file = "readme.md", content-type = "text/markdown" }
requires-python = ">=3.13"
dependencies = [
    "construct>=2.10.70",
    "msgspec>=0.20.0",
    "pillow>=12.1.0",
    "platformdirs>=4.5.1",
    "raylib>=5.5.0.4",
    "typer>=0.21.1",
]

[project.urls]
Documentation = "https://crimson.banteg.xyz/"
Repository = "https://github.com/banteg/crimson"

[project.scripts]
crimsonland = "crimson.cli:main"
crimson = "crimson.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["crimson", "grim"]

[dependency-groups]
dev = [
    "import-linter>=2.9",
    "py-spy>=0.4.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "syrupy>=5.0.0",
    "ty>=0.0.15",
    "zensical>=0.0.16",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E402"]

[tool.pytest.ini_options]
addopts = [
    "--cov=crimson",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["crimson"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.importlinter]
root_packages = ["crimson", "grim"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "grim must not import crimson"
type = "forbidden"
source_modules = ["grim"]
forbidden_modules = ["crimson"]

[[tool.importlinter.contracts]]
name = "perk implementations must stay out of selection and availability"
type = "forbidden"
source_modules = ["crimson.perks.impl"]
forbidden_modules = ["crimson.perks.selection", "crimson.perks.availability"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "perk runtime must stay out of selection and availability"
type = "forbidden"
source_modules = ["crimson.perks.runtime"]
forbidden_modules = ["crimson.perks.selection", "crimson.perks.availability"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "selection and availability must not import perk impl directly"
type = "forbidden"
source_modules = ["crimson.perks.selection", "crimson.perks.availability"]
forbidden_modules = ["crimson.perks.impl"]
allow_indirect_imports = true
